[package]
name = "peachpy"
version = "0.0.1"
description = "peachpy"
authors = ["kleineluka"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [ ] }

[dependencies]
tauri = { version = "1", features = [ "api-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10.8"
sysinfo = "0.30.12"
fs_extra = "1.3.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
